# socialmedia-comment-analyser

./: .gitignore  README.md  dvc.yaml  pyproject.toml  setup.py
flask_app/: app.py
frontend/: popup.js
notebook/: Experiment2.ipynb  Experiment3.ipynb  Experiment4.ipynb  Experiment5.ipynb  Kindle (1).ipynb  Untitled7.ipynb
src/model/: model_evaluation.py  register_model.py
